--- a/coding_challenge.html
+++ b/coding_challenge.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Christoph Stepper">
-<meta name="dcterms.date" content="2023-05-30">
+<meta name="dcterms.date" content="2023-06-02">
 
 <title>Motor third-part liability</title>
 <style>
@@ -135,7 +135,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">May 30, 2023</p>
+      <p class="date">June 2, 2023</p>
     </div>
   </div>
   
@@ -160,7 +160,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <span id="cb1-3"><a href="#cb1-3" aria-hidden="true" tabindex="-1"></a><span class="fu">library</span>(patchwork)</span>
 <span id="cb1-4"><a href="#cb1-4" aria-hidden="true" tabindex="-1"></a><span class="fu">library</span>(tidymodels)</span>
 <span id="cb1-5"><a href="#cb1-5" aria-hidden="true" tabindex="-1"></a><span class="fu">tidymodels_prefer</span>()</span>
-<span id="cb1-6"><a href="#cb1-6" aria-hidden="true" tabindex="-1"></a><span class="fu">library</span>(DALEX)</span>
+<span id="cb1-6"><a href="#cb1-6" aria-hidden="true" tabindex="-1"></a><span class="co"># library(DALEX)</span></span>
 <span id="cb1-7"><a href="#cb1-7" aria-hidden="true" tabindex="-1"></a><span class="co"># library(agua)</span></span>
 <span id="cb1-8"><a href="#cb1-8" aria-hidden="true" tabindex="-1"></a>conflicted<span class="sc">::</span><span class="fu">conflicts_prefer</span>(base<span class="sc">::</span>log10)</span>
 <span id="cb1-9"><a href="#cb1-9" aria-hidden="true" tabindex="-1"></a>conflicted<span class="sc">::</span><span class="fu">conflicts_prefer</span>(base<span class="sc">::</span><span class="st">`</span><span class="at">||</span><span class="st">`</span>)</span>
@@ -361,7 +361,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <div class="quarto-figure quarto-figure-center page-columns page-full">
 <figure class="figure page-columns page-full">
 <p><a href="coding_challenge_files/figure-html/eda-claim-1.png" class="lightbox" data-gallery="quarto-lightbox-gallery-2"><img src="coding_challenge_files/figure-html/eda-claim-1.png" class="img-fluid figure-img" width="672"></a></p>
-<figcaption class="figure-caption margin-caption">Claim amounts per exposure (on log10-transformed axis). (a) density plot. (c) descending ecdf in log-log.</figcaption>
+<figcaption class="figure-caption margin-caption">Claim amounts per exposure (on log10-transformed axis). (a) density plot. (b) descending ecdf in log-log.</figcaption>
 </figure>
 </div>
 </div>
@@ -963,7 +963,7 @@ $VehGas
 <div class="quarto-figure quarto-figure-center page-columns page-full">
 <figure class="figure page-columns page-full">
 <p><a href="coding_challenge_files/figure-html/corr-pred-res-1.png" class="lightbox" data-gallery="quarto-lightbox-gallery-11"><img src="coding_challenge_files/figure-html/corr-pred-res-1.png" class="img-fluid figure-img" width="768"></a></p>
-<figcaption class="figure-caption margin-caption">Distribution of variables for each VehBrand.</figcaption>
+<figcaption class="figure-caption margin-caption">Correlation of predictors with response.</figcaption>
 </figure>
 </div>
 </div>
@@ -1121,19 +1121,19 @@ $VehGas
 <pre><code>i 1 of 3 resampling: dummy_lm</code></pre>
 </div>
 <div class="cell-output cell-output-stderr">
-<pre><code>✔ 1 of 3 resampling: dummy_lm (8.5s)</code></pre>
+<pre><code>✔ 1 of 3 resampling: dummy_lm (8s)</code></pre>
 </div>
 <div class="cell-output cell-output-stderr">
 <pre><code>i 2 of 3 resampling: basic_rf</code></pre>
 </div>
 <div class="cell-output cell-output-stderr">
-<pre><code>✔ 2 of 3 resampling: basic_rf (4m 47.9s)</code></pre>
+<pre><code>✔ 2 of 3 resampling: basic_rf (4m 34s)</code></pre>
 </div>
 <div class="cell-output cell-output-stderr">
 <pre><code>i 3 of 3 resampling: onehot_xgb</code></pre>
 </div>
 <div class="cell-output cell-output-stderr">
-<pre><code>✔ 3 of 3 resampling: onehot_xgb (26.6s)</code></pre>
+<pre><code>✔ 3 of 3 resampling: onehot_xgb (24.1s)</code></pre>
 </div>
 <details open="">
 <summary>Code</summary>
@@ -1148,7 +1148,7 @@ $VehGas
 3 onehot_xgb &lt;tibble [1 × 4]&gt; &lt;opts[2]&gt; &lt;rsmp[+]&gt;</code></pre>
 </div>
 </div>
-<p>For comparing the models WRT to performance,</p>
+<p>For comparing the models WRT to performance, we evaluate the errors in cross-validation mode.</p>
 <div class="cell page-columns page-full">
 <details>
 <summary>Code</summary>
@@ -1255,19 +1255,19 @@ $VehGas
 <pre><code>i 1 of 3 resampling: dummy_lm</code></pre>
 </div>
 <div class="cell-output cell-output-stderr">
-<pre><code>✔ 1 of 3 resampling: dummy_lm (259ms)</code></pre>
+<pre><code>✔ 1 of 3 resampling: dummy_lm (230ms)</code></pre>
 </div>
 <div class="cell-output cell-output-stderr">
 <pre><code>i 2 of 3 resampling: basic_rf</code></pre>
 </div>
 <div class="cell-output cell-output-stderr">
-<pre><code>✔ 2 of 3 resampling: basic_rf (6.5s)</code></pre>
+<pre><code>✔ 2 of 3 resampling: basic_rf (6s)</code></pre>
 </div>
 <div class="cell-output cell-output-stderr">
 <pre><code>i 3 of 3 resampling: onehot_xgb</code></pre>
 </div>
 <div class="cell-output cell-output-stderr">
-<pre><code>✔ 3 of 3 resampling: onehot_xgb (645ms)</code></pre>
+<pre><code>✔ 3 of 3 resampling: onehot_xgb (622ms)</code></pre>
 </div>
 </div>
 <p>Let’s extract the metrics and compare them with the ones from the cross-validation. Ideally, these should be similar, indicating that we didn’t get too optimistic values in cross-validation.</p>
@@ -1742,7 +1742,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 });
 </script>
 </div> <!-- /content -->
-<script>var lightboxQuarto = GLightbox({"descPosition":"bottom","selector":".lightbox","openEffect":"zoom","closeEffect":"zoom","loop":true});</script>
+<script>var lightboxQuarto = GLightbox({"loop":true,"closeEffect":"zoom","openEffect":"zoom","selector":".lightbox","descPosition":"bottom"});</script>
 
 
 
